chg api to number
